# api/requests/authentication_requests.go
@@ -1,8 +1,11 @@
 package requests
 
 type RegisterRequest struct {
-	Email    string `json:"email" validate:"required"`
-	Password string `json:"password" validate:"required"`
+	FirstName string `json:"first_name" validate:"required"`
+	LastName  string `json:"last_name" validate:"omitempty"`
+	Age       int    `json:"age" validate:"omitempty"`
+	Email     string `json:"email" validate:"required"`
+	Password  string `json:"password" validate:"required"`
 }
 
 type LoginRequest struct {
