# docs/swagger.yaml
@@ -4,6 +4,8 @@ definitions:
     properties:
       poll_category_id:
         type: integer
+    required:
+    - poll_category_id
     type: object
   requests.CreatePollRequest:
     properties:
@@ -15,11 +17,17 @@ definitions:
         type: string
       title:
         type: string
+    required:
+    - categories
+    - expires_at
+    - title
     type: object
   requests.LogOutRequest:
     properties:
       user_id:
         type: integer
+    required:
+    - user_id
     type: object
   requests.LoginRequest:
     properties:
@@ -27,13 +35,26 @@ definitions:
         type: string
       password:
         type: string
+    required:
+    - email
+    - password
     type: object
   requests.RegisterRequest:
     properties:
+      age:
+        type: integer
       email:
+        type: string
+      first_name:
+        type: string
+      last_name:
         type: string
       password:
         type: string
+    required:
+    - email
+    - first_name
+    - password
     type: object
   requests.TokensRequest:
     properties:
@@ -41,6 +62,9 @@ definitions:
         type: string
       refresh_token:
         type: string
+    required:
+    - jwt_token
+    - refresh_token
     type: object
   requests.UpdatePollRequest:
     properties:
@@ -58,6 +82,10 @@ definitions:
         type: array
       title:
         type: string
+    required:
+    - description
+    - expires_at
+    - title
     type: object
   results.CreatePollResult:
     properties:
@@ -143,7 +171,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Authenticate a user with email and password, returning a JWT token.
+      description: Login a user
       parameters:
       - description: Login Request
         in: body
@@ -155,19 +183,15 @@ paths:
       - application/json
       responses:
         "200":
-          description: Authentication token and refresh token
+          description: JWT Token & Refresh Token
           schema:
             $ref: '#/definitions/results.LoginResult'
         "400":
-          description: Binding failure
-          schema:
-            $ref: '#/definitions/utility.ErrorCode'
-        "401":
-          description: Invalid credentials
+          description: 4xx Errors
           schema:
             $ref: '#/definitions/utility.ErrorCode'
         "500":
-          description: Internal server error
+          description: 5xx Errors
           schema:
             $ref: '#/definitions/utility.ErrorCode'
       summary: Login a user
@@ -179,9 +203,10 @@ paths:
       - application/json
       description: Ends the user session by invalidating the token (requires JWT).
       parameters:
-      - description: LogOut Request (optional)
+      - description: LogOut Request
         in: body
         name: request
+        required: true
         schema:
           $ref: '#/definitions/requests.LogOutRequest'
       produces:
@@ -191,12 +216,12 @@ paths:
           description: Successfully logged out
           schema:
             type: string
-        "401":
-          description: Unauthorized - Invalid or missing token
+        "400":
+          description: 4xx Errors
           schema:
             $ref: '#/definitions/utility.ErrorCode'
         "500":
-          description: Internal server error
+          description: 5xx Errors
           schema:
             $ref: '#/definitions/utility.ErrorCode'
       security:
@@ -208,7 +233,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: Refresh access and refresh tokens using the provided tokens.
+      description: Generates a new JWT token and refresh token using the refresh token
+        provided
       parameters:
       - description: Token Refresh Request
         in: body
@@ -220,19 +246,15 @@ paths:
       - application/json
       responses:
         "200":
-          description: New access and refresh tokens
+          description: JWT & Refresh Token
           schema:
             $ref: '#/definitions/results.RefreshResult'
         "400":
-          description: Binding failure
-          schema:
-            $ref: '#/definitions/utility.ErrorCode'
-        "401":
-          description: Unauthorized
+          description: 4xx Errors
           schema:
             $ref: '#/definitions/utility.ErrorCode'
         "500":
-          description: Internal server error
+          description: 5xx Errors
           schema:
             $ref: '#/definitions/utility.ErrorCode'
       summary: Refresh user tokens
@@ -242,7 +264,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: This endpoint registers a new user with the provided details.
+      description: Register a new user
       parameters:
       - description: User Registration Request
         in: body
@@ -256,14 +278,13 @@ paths:
         "200":
           description: 'success: true'
           schema:
-            additionalProperties: true
-            type: object
+            type: boolean
         "400":
-          description: Binding failure or validation errors
+          description: 4xx Errors
           schema:
             $ref: '#/definitions/utility.ErrorCode'
         "500":
-          description: Internal server error
+          description: 5xx Errors
           schema:
             $ref: '#/definitions/utility.ErrorCode'
       summary: Register a new user
@@ -287,6 +308,10 @@ paths:
         in: query
         name: filter
         type: string
+      - description: Show only active polls (default false)
+        in: query
+        name: show_active_only
+        type: boolean
       produces:
       - application/json
       responses:
@@ -565,6 +590,10 @@ paths:
         in: query
         name: filter
         type: string
+      - description: Show only active polls (default false)
+        in: query
+        name: show_active_only
+        type: boolean
       produces:
       - application/json
       responses:
